--- a/Entrega2/notebooks/01_preprocessing.ipynb
+++ b/Entrega2/notebooks/01_preprocessing.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 82,
    "id": "3213e506",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 83,
    "id": "d8606b94",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 84,
    "id": "54938b91",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 85,
    "id": "hgy31flkx1i",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 86,
    "id": "vwo56c96vt8",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 87,
    "id": "xcba9yp1fkr",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 88,
    "id": "t6t56luzgxq",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 89,
    "id": "yr3kqx27c4q",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 90,
    "id": "fzvvp2a5x4",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 91,
    "id": "09vq7xd68xw3",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 92,
    "id": "1900d66e",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 93,
    "id": "f4a8e286",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 94,
    "id": "0x024sbqhjg",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 95,
    "id": "5pve3x8i535",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 96,
    "id": "9g3rhun0b0u",
    "metadata": {},
    "outputs": [
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 97,
    "id": "8mt2qdih81y",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 98,
    "id": "33b10fd7",
    "metadata": {},
    "outputs": [
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 99,
    "id": "6q418whpimk",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 100,
    "id": "dcwzc788rpe",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1626,15 @@
       "2️⃣ CABINA (Cabin) - Tratamiento MNAR:\n",
       "   ✓ Variable indicadora 'Has_Cabin' creada\n",
       "   📊 Distribución: [687, 204] [Sin/Con Cabina]\n",
+      "   📋 Analizando patrones reales por clase:\n",
+      "      Clase 1: Cubierta C (más común)\n",
+      "      Clase 2: Cubierta F (más común)\n",
+      "      Clase 3: Cubierta F (más común)\n",
       "   ✓ 687 cabinas imputadas por patrón de clase\n",
+      "   📊 Distribución resultante por clase:\n",
+      "      Clase 1: 40 cabinas → C0\n",
+      "      Clase 2: 168 cabinas → F0\n",
+      "      Clase 3: 479 cabinas → F0\n",
       "\n",
       "3️⃣ PUERTO (Embarked) - Análisis de casos específicos:\n",
       "   Analizando casos faltantes:\n",
@@ -1690,19 +1698,37 @@
     "    print(f\"   ✓ Variable indicadora 'Has_Cabin' creada\")\n",
     "    print(f\"   📊 Distribución: {result['Has_Cabin'].value_counts().tolist()} [Sin/Con Cabina]\")\n",
     "    \n",
-    "    # Imputar con categoría especial por clase\n",
-    "    cabin_pattern_by_class = result[result['Cabin'].notna()].groupby('Pclass')['Cabin'].apply(\n",
-    "        lambda x: x.str[0].mode().iloc[0] if not x.str[0].mode().empty else 'U'\n",
-    "    )\n",
+    "    # CORRECCIÓN: Identificar patrón correcto por clase usando datos originales\n",
+    "    print(\"   📋 Analizando patrones reales por clase:\")\n",
+    "    cabin_deck_by_class = {}\n",
+    "    for pclass in [1, 2, 3]:\n",
+    "        class_cabins = data[data['Pclass'] == pclass]['Cabin'].dropna()\n",
+    "        if not class_cabins.empty:\n",
+    "            decks = class_cabins.str[0].value_counts()\n",
+    "            most_common_deck = decks.index[0]\n",
+    "            cabin_deck_by_class[pclass] = most_common_deck\n",
+    "            print(f\"      Clase {pclass}: Cubierta {most_common_deck} (más común)\")\n",
+    "        else:\n",
+    "            cabin_deck_by_class[pclass] = 'U'  # Unknown\n",
     "    \n",
+    "    # Función de asignación corregida\n",
     "    def assign_cabin(row):\n",
     "        if pd.isna(row['Cabin']):\n",
-    "            deck = cabin_pattern_by_class.get(row['Pclass'], 'U')\n",
+    "            deck = cabin_deck_by_class.get(row['Pclass'], 'U')\n",
     "            return f\"{deck}0\"  # Cabina genérica por cubierta\n",
     "        return row['Cabin']\n",
     "    \n",
     "    result['Cabin'] = result.apply(assign_cabin, axis=1)\n",
     "    print(f\"   ✓ {cabin_missing_before} cabinas imputadas por patrón de clase\")\n",
+    "    \n",
+    "    # Mostrar distribución resultante\n",
+    "    print(\"   📊 Distribución resultante por clase:\")\n",
+    "    for pclass in [1, 2, 3]:\n",
+    "        imputed_mask = (result['Pclass'] == pclass) & (result['Has_Cabin'] == 0)\n",
+    "        if imputed_mask.any():\n",
+    "            sample_cabin = result[imputed_mask]['Cabin'].iloc[0]\n",
+    "            count = imputed_mask.sum()\n",
+    "            print(f\"      Clase {pclass}: {count} cabinas → {sample_cabin}\")\n",
     "    \n",
     "    # 3. EMBARKED: MCAR - Análisis específico por casos\n",
     "    print(\"\\n3️⃣ PUERTO (Embarked) - Análisis de casos específicos:\")\n",
@@ -1734,7 +1760,7 @@
     "    \n",
     "    return result\n",
     "\n",
-    "# Aplicar método basado en grupos\n",
+    "# Aplicar método basado en grupos CORREGIDO\n",
     "print(\"=\" * 70)\n",
     "df_group_result = imputation_group(df_group)\n",
     "\n",
@@ -1762,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 101,
    "id": "3esqgop568y",
    "metadata": {},
    "outputs": [
@@ -1928,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "id": "r7cuxjl7m7h",
    "metadata": {},
    "outputs": [
@@ -2069,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 103,
    "id": "uvcl8ffbndm",
    "metadata": {},
    "outputs": [
@@ -2236,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 106,
    "id": "0ba6c59c",
    "metadata": {},
    "outputs": [
