--- a/Entrega2/notebooks/02_feature_engineering.ipynb
+++ b/Entrega2/notebooks/02_feature_engineering.ipynb
@@ -148,7 +148,7 @@
          "type": "string"
         }
        ],
-       "ref": "c54c03b7-4591-4bc4-a39d-312c7100d5d0",
+       "ref": "1979e219-da21-475c-8283-a9ff66fb349a",
        "rows": [
         [
          "0",
@@ -2356,6 +2356,11 @@
       "NameLength:\n",
       "  Media: 26.96, Mediana: 25.00, Std: 9.28\n",
       "  Asimetría: 1.391, Curtosis: 2.539\n",
+      "  Recomendaciones: Transformación logarítmica (sesgo positivo); Considerar detección de outliers (curtosis alta)\n",
+      "\n",
+      "NameLength:\n",
+      "  Media: 26.96, Mediana: 25.00, Std: 9.28\n",
+      "  Asimetría: 1.391, Curtosis: 2.539\n",
       "  Recomendaciones: Transformación logarítmica (sesgo positivo); Considerar detección de outliers (curtosis alta)\n"
      ]
     },
@@ -2672,6 +2677,22 @@
       "    82.00\n",
       "    67.00\n",
       "    65.00\n",
+      "\n",
+      "FamilySize:\n",
+      "  Rango normal (IQR): [-0.50, 3.50]\n",
+      "  Outliers detectados (IQR): 91 (10.2%)\n",
+      "  Valores outliers más extremos:\n",
+      "    11.00\n",
+      "    11.00\n",
+      "    11.00\n",
+      "\n",
+      "TicketFrequency:\n",
+      "  Rango normal (IQR): [-0.50, 3.50]\n",
+      "  Outliers detectados (IQR): 93 (10.4%)\n",
+      "  Valores outliers más extremos:\n",
+      "    7.00\n",
+      "    7.00\n",
+      "    7.00\n",
       "\n",
       "FamilySize:\n",
       "  Rango normal (IQR): [-0.50, 3.50]\n",
@@ -3274,6 +3295,102 @@
      "output_type": "stream",
      "text": [
       "=== ANÁLISIS DE VARIABLES CATEGÓRICAS PARA ENCODING ===\n",
+      "Variables categóricas encontradas: 9\n",
+      "\n",
+      "Pclass:\n",
+      "  Valores únicos: 3\n",
+      "  Distribución: {3: 491, 1: 216, 2: 184}\n",
+      "  Categoría más común: 55.1%\n",
+      "  Método recomendado: OrdinalEncoder\n",
+      "  Razón: Variable ordinal con orden natural\n",
+      "\n",
+      "Sex:\n",
+      "  Valores únicos: 2\n",
+      "  Distribución: {'male': 577, 'female': 314}\n",
+      "  Categoría más común: 64.8%\n",
+      "  Método recomendado: LabelEncoder\n",
+      "  Razón: Variable binaria\n",
+      "\n",
+      "Embarked:\n",
+      "  Valores únicos: 3\n",
+      "  Distribución: {'S': 644, 'C': 170, 'Q': 77}\n",
+      "  Categoría más común: 72.3%\n",
+      "  Método recomendado: OneHotEncoder\n",
+      "  Razón: Pocas categorías, bien distribuidas\n",
+      "\n",
+      "Title:\n",
+      "  Valores únicos: 5\n",
+      "  Distribución: {'Mr': 517, 'Miss': 185, 'Mrs': 126}\n",
+      "  Categoría más común: 58.0%\n",
+      "  Método recomendado: OneHotEncoder\n",
+      "  Razón: Pocas categorías, bien distribuidas\n",
+      "\n",
+      "AgeGroup:\n",
+      "  Valores únicos: 7\n",
+      "  Distribución: {'YoungAdult': 409, 'Adult': 254, 'MidAge': 89}\n",
+      "  Categoría más común: 45.9%\n",
+      "  Método recomendado: OrdinalEncoder\n",
+      "  Razón: Variable ordinal con orden natural\n",
+      "\n",
+      "CabinDeck:\n",
+      "  Valores únicos: 8\n",
+      "  Distribución: {'F': 660, 'C': 99, 'B': 47}\n",
+      "  Categoría más común: 74.1%\n",
+      "  Método recomendado: TargetEncoder\n",
+      "  Razón: Categorías moderadas, usar relación con target\n",
+      "\n",
+      "TicketFreq_Category:\n",
+      "  Valores únicos: 5\n",
+      "  Distribución: {'Individual': 547, 'Pareja': 188, 'Grupo_Pequeño': 107}\n",
+      "  Categoría más común: 61.4%\n",
+      "  Método recomendado: OneHotEncoder\n",
+      "  Razón: Pocas categorías, bien distribuidas\n",
+      "\n",
+      "NameLength_Category:\n",
+      "  Valores únicos: 5\n",
+      "  Distribución: {'Corto': 514, 'Muy_Corto': 243, 'Medio': 109}\n",
+      "  Categoría más común: 57.7%\n",
+      "  Método recomendado: OneHotEncoder\n",
+      "  Razón: Pocas categorías, bien distribuidas\n",
+      "\n",
+      "TicketPrefix_Category:\n",
+      "  Valores únicos: 7\n",
+      "  Distribución: {'Numeric': 661, 'Other': 122, 'PC': 60}\n",
+      "  Categoría más común: 74.2%\n",
+      "  Método recomendado: TargetEncoder\n",
+      "  Razón: Categorías moderadas, usar relación con target\n",
+      "\n",
+      "=== RESUMEN DE DECISIONES DE ENCODING ===\n",
+      "Pclass: OrdinalEncoder - Variable ordinal con orden natural\n",
+      "Sex: LabelEncoder - Variable binaria\n",
+      "Embarked: OneHotEncoder - Pocas categorías, bien distribuidas\n",
+      "Title: OneHotEncoder - Pocas categorías, bien distribuidas\n",
+      "AgeGroup: OrdinalEncoder - Variable ordinal con orden natural\n",
+      "CabinDeck: TargetEncoder - Categorías moderadas, usar relación con target\n",
+      "TicketFreq_Category: OneHotEncoder - Pocas categorías, bien distribuidas\n",
+      "NameLength_Category: OneHotEncoder - Pocas categorías, bien distribuidas\n",
+      "TicketPrefix_Category: TargetEncoder - Categorías moderadas, usar relación con target\n",
+      "\n",
+      "=== APLICANDO ENCODING ===\n",
+      "Sex: {'female': np.int64(0), 'male': np.int64(1)}\n",
+      "Pclass: {3: 0, 2: 1, 1: 2}\n",
+      "AgeGroup: {'Infant': 0, 'Child': 1, 'Teen': 2, 'YoungAdult': 3, 'Adult': 4, 'MidAge': 5, 'Senior': 6, 'Unknown': -1}\n",
+      "Embarked: ['Embarked_C', 'Embarked_Q', 'Embarked_S', 'Embarked_nan']\n",
+      "Title: ['Title_Master', 'Title_Miss', 'Title_Mr', 'Title_Mrs', 'Title_Rare', 'Title_nan']\n",
+      "TicketFreq_Category: ['TicketFreq_Category_Grupo_Grande', 'TicketFreq_Category_Grupo_Mediano', 'TicketFreq_Category_Grupo_Pequeño', 'TicketFreq_Category_Individual', 'TicketFreq_Category_Pareja', 'TicketFreq_Category_nan']\n",
+      "NameLength_Category: ['NameLength_Category_Corto', 'NameLength_Category_Largo', 'NameLength_Category_Medio', 'NameLength_Category_Muy_Corto', 'NameLength_Category_Muy_Largo', 'NameLength_Category_nan']\n",
+      "Variables One-Hot creadas: 22\n",
+      "\n",
+      "=== TARGET ENCODING ===\n",
+      "CabinDeck:\n",
+      "  Target means: {'A': 0.4666666666666667, 'B': 0.7446808510638298, 'C': 0.5454545454545454, 'D': 0.7575757575757576, 'E': 0.75}\n",
+      "  Con smoothing aplicado (alpha=10)\n",
+      "TicketPrefix_Category:\n",
+      "  Target means: {'A': 0.0, 'CA': 0.34146341463414637, 'Numeric': 0.3842662632375189, 'Other': 0.26229508196721313, 'PC': 0.65}\n",
+      "  Con smoothing aplicado (alpha=10)\n",
+      "\n",
+      "Total de columnas después del encoding: 82\n",
+      "\n",
       "Variables categóricas encontradas: 9\n",
       "\n",
       "Pclass:\n",
@@ -5027,7 +5144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "6126e4e4",
    "metadata": {},
    "outputs": [
@@ -5286,7 +5403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "aff4a1d8",
    "metadata": {},
    "outputs": [
@@ -5585,7 +5702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "80915a2f",
    "metadata": {},
    "outputs": [
@@ -5916,7 +6033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "5fe4a427",
    "metadata": {},
    "outputs": [
@@ -5973,7 +6090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "3700bbef",
    "metadata": {},
    "outputs": [
@@ -6069,7 +6186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "9461757f",
    "metadata": {},
    "outputs": [
@@ -6221,7 +6338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "410db02f",
    "metadata": {},
    "outputs": [
@@ -6351,7 +6468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "0ff7e3b1",
    "metadata": {},
    "outputs": [
@@ -6461,7 +6578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "87274e47",
    "metadata": {},
    "outputs": [
@@ -6608,7 +6725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "e23b0b6a",
    "metadata": {},
    "outputs": [
@@ -6685,6 +6802,28 @@
     "\n",
     "print(f\"\\nConclusión: Las variables de interacción capturan efectos combinados importantes\")\n",
     "print(f\"Las categorías muestran rangos amplios de supervivencia, indicando alto valor predictivo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72e0c8a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo guardado en: ../data/Titanic_Dataset_Featured.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guardar el DataFrame final con todas las features en un nuevo CSV\n",
+    "output_path = \"../data/Titanic_Dataset_Featured.csv\"  \n",
+    "df.to_csv(output_path, index=False)\n",
+    "print(f\"Archivo guardado en: {output_path}\")\n",
+    "df"
    ]
   }
  ],
