Parte de Interpretabilidad

--- a/Entrega3/Entrega3_Modelado.ipynb
+++ b/Entrega3/Entrega3_Modelado.ipynb
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7fca8c5f",
    "metadata": {},
    "outputs": [
@@ -423,7 +423,7 @@
     "        base_model = xgb.XGBClassifier(\n",
     "            random_state=self.random_state,\n",
     "            verbosity=0,\n",
-    "            eval_metric='logloss'\n",
+    "            eval_metric='logloss' # Métrica de evaluación interna (no afecta GridSearch)\n",
     "        )\n",
     "        \n",
     "        print(\"🔍 Ejecutando GridSearchCV...\")\n",
@@ -436,7 +436,7 @@
     "            cv=5,  # 5-fold cross validation\n",
     "            scoring='roc_auc',\n",
     "            n_jobs=-1,\n",
-    "            verbose=1\n",
+    "            verbose=1 ##Información de progreso del entrenamiento\n",
     "        )\n",
     "        \n",
     "        self.grid_search.fit(X_train, y_train)\n",
@@ -472,7 +472,7 @@
     "        self.best_model = self.grid_search.best_estimator_\n",
     "        self.best_model.fit(X_train, y_train)\n",
     "        \n",
-    "        print(\"✅ Modelo entrenado con mejores parámetros\")\n",
+    "        #print(\"Modelo entrenado con mejores parámetros\")\n",
     "    \n",
     "    def _evaluate_model(self, X_val, y_val):\n",
     "        \"\"\"Evaluación completa en conjunto de validación\"\"\"\n",
