Logistic Regression Modelo

--- a/Entrega3/Entrega3_Modelado.ipynb
+++ b/Entrega3/Entrega3_Modelado.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "372a4ef2",
    "metadata": {},
    "outputs": [
@@ -269,16 +269,275 @@
     }
    ],
    "source": [
-    "# Implementación de Logistic Regression\n",
-    "print(\"=== LOGISTIC REGRESSION ===\")\n",
-    "print(\"Características:\")\n",
-    "print(\"- Modelo lineal interpretable\")\n",
-    "print(\"- Probabilidades calibradas\")\n",
-    "print(\"- Baseline sólido\")\n",
-    "print(\"\\nPendiente de implementación:\")\n",
-    "print(\"- Entrenamiento del modelo\")\n",
-    "print(\"- Evaluación inicial\")\n",
-    "print(\"- Análisis de coeficientes\")"
+    "# 📊 LOGISTIC REGRESSION - MODELO INTERPRETABLE BASELINE\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+    "import joblib\n",
+    "import os\n",
+    "\n",
+    "class ModelExperiment:\n",
+    "    def __init__(self, model_name, random_state=42):\n",
+    "        self.model_name = model_name\n",
+    "        self.random_state = random_state\n",
+    "        self.results = {}\n",
+    "        \n",
+    "    def run_experiment(self, X_train, y_train, X_val, y_val):\n",
+    "        \"\"\"\n",
+    "        1. Búsqueda de hiperparámetros (GridSearch)\n",
+    "        2. Validación cruzada estratificada (5-fold)\n",
+    "        3. Entrenamiento con mejores parámetros\n",
+    "        4. Evaluación en conjunto de validación\n",
+    "        5. Análisis específico de Regresión Logística\n",
+    "        6. Guardar resultados y modelo\n",
+    "        \"\"\"\n",
+    "        print(f\"\\n{'='*50}\")\n",
+    "        print(f\"EXPERIMENTO: {self.model_name}\")\n",
+    "        print(f\"{'='*50}\")\n",
+    "        \n",
+    "        # 1. Búsqueda de hiperparámetros\n",
+    "        print(\"\\n1️⃣ BÚSQUEDA DE HIPERPARÁMETROS\")\n",
+    "        self._hyperparameter_search(X_train, y_train)\n",
+    "        \n",
+    "        # 2. Validación cruzada\n",
+    "        print(\"\\n2️⃣ VALIDACIÓN CRUZADA ESTRATIFICADA\")\n",
+    "        self._cross_validation(X_train, y_train)\n",
+    "        \n",
+    "        # 3. Entrenamiento con mejores parámetros\n",
+    "        print(\"\\n3️⃣ ENTRENAMIENTO CON MEJORES PARÁMETROS\")\n",
+    "        self._train_best_model(X_train, y_train)\n",
+    "        \n",
+    "        # 4. Evaluación en validación\n",
+    "        print(\"\\n4️⃣ EVALUACIÓN EN CONJUNTO DE VALIDACIÓN\")\n",
+    "        self._evaluate_model(X_val, y_val)\n",
+    "        \n",
+    "        # 5. Análisis específicos de Regresión Logística\n",
+    "        print(\"\\n5️⃣ ANÁLISIS ESPECÍFICOS\")\n",
+    "        self._logistic_analysis(X_train, y_train, X_val, y_val)\n",
+    "        \n",
+    "        # 6. Guardar resultados y modelo\n",
+    "        print(\"\\n6️⃣ GUARDADO DE RESULTADOS\")\n",
+    "        self._save_results()\n",
+    "        \n",
+    "        return self.results\n",
+    "    \n",
+    "    def _hyperparameter_search(self, X_train, y_train):\n",
+    "        \"\"\"Búsqueda de hiperparámetros optimizada para Logistic Regression\"\"\"\n",
+    "        # Definir espacio de búsqueda según especificaciones\n",
+    "        param_grid = [\n",
+    "            {\n",
+    "                'C': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+    "                'penalty': ['l2'],\n",
+    "                'solver': ['liblinear', 'lbfgs'],\n",
+    "                'class_weight': [None, 'balanced'],\n",
+    "                'max_iter': [1000]\n",
+    "            },\n",
+    "            {\n",
+    "                'C': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+    "                'penalty': ['l1'],\n",
+    "                'solver': ['liblinear', 'saga'],\n",
+    "                'class_weight': [None, 'balanced'],\n",
+    "                'max_iter': [1000]\n",
+    "            },\n",
+    "            {\n",
+    "                'C': [0.001, 0.01, 0.1, 1, 10, 100],\n",
+    "                'penalty': ['elasticnet'],\n",
+    "                'solver': ['saga'],\n",
+    "                'l1_ratio': [0.15, 0.5, 0.85],\n",
+    "                'class_weight': [None, 'balanced'],\n",
+    "                'max_iter': [1000]\n",
+    "            }\n",
+    "        ]\n",
+    "        \n",
+    "        base_model = LogisticRegression(random_state=self.random_state)\n",
+    "        \n",
+    "        self.grid_search = GridSearchCV(\n",
+    "            estimator=base_model,\n",
+    "            param_grid=param_grid,\n",
+    "            cv=5,\n",
+    "            scoring='roc_auc',\n",
+    "            n_jobs=-1,\n",
+    "            verbose=0\n",
+    "        )\n",
+    "        \n",
+    "        self.grid_search.fit(X_train, y_train)\n",
+    "        \n",
+    "        self.results['best_params'] = self.grid_search.best_params_\n",
+    "        self.results['best_cv_score'] = self.grid_search.best_score_\n",
+    "        \n",
+    "        print(\"✅ Búsqueda completada\")\n",
+    "        print(f\"🎯 Mejor ROC-AUC CV: {self.grid_search.best_score_:.4f}\")\n",
+    "        print(\"🏆 Mejores parámetros:\")\n",
+    "        for param, value in self.grid_search.best_params_.items():\n",
+    "            print(f\"   {param}: {value}\")\n",
+    "    \n",
+    "    def _cross_validation(self, X_train, y_train):\n",
+    "        \"\"\"Validación cruzada del mejor modelo\"\"\"\n",
+    "        cv_scores = cross_val_score(\n",
+    "            self.grid_search.best_estimator_,\n",
+    "            X_train, y_train,\n",
+    "            cv=5,\n",
+    "            scoring='roc_auc'\n",
+    "        )\n",
+    "        \n",
+    "        self.results['cv_scores'] = cv_scores\n",
+    "        self.results['cv_mean'] = cv_scores.mean()\n",
+    "        self.results['cv_std'] = cv_scores.std()\n",
+    "        \n",
+    "        print(f\"📊 Validación cruzada: {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")\n",
+    "    \n",
+    "    def _train_best_model(self, X_train, y_train):\n",
+    "        \"\"\"Entrenamiento del modelo con mejores parámetros\"\"\"\n",
+    "        self.best_model = self.grid_search.best_estimator_\n",
+    "        self.best_model.fit(X_train, y_train)\n",
+    "        print(\"✅ Modelo entrenado\")\n",
+    "    \n",
+    "    def _evaluate_model(self, X_val, y_val):\n",
+    "        \"\"\"Evaluación en conjunto de validación\"\"\"\n",
+    "        y_pred = self.best_model.predict(X_val)\n",
+    "        y_pred_proba = self.best_model.predict_proba(X_val)[:, 1]\n",
+    "        \n",
+    "        metrics = {\n",
+    "            'accuracy': accuracy_score(y_val, y_pred),\n",
+    "            'precision': precision_score(y_val, y_pred),\n",
+    "            'recall': recall_score(y_val, y_pred),\n",
+    "            'f1_score': f1_score(y_val, y_pred),\n",
+    "            'roc_auc': roc_auc_score(y_val, y_pred_proba)\n",
+    "        }\n",
+    "        \n",
+    "        self.results['metrics'] = metrics\n",
+    "        \n",
+    "        print(\"📊 MÉTRICAS DE EVALUACIÓN:\")\n",
+    "        for metric, value in metrics.items():\n",
+    "            print(f\"   {metric.upper()}: {value:.4f}\")\n",
+    "    \n",
+    "    def _logistic_analysis(self, X_train, y_train, X_val, y_val):\n",
+    "        \"\"\"Análisis específico de Regresión Logística\"\"\"\n",
+    "        print(\"🔍 ANÁLISIS ESPECÍFICO REGRESIÓN LOGÍSTICA:\")\n",
+    "        \n",
+    "        # 1. Coeficientes del modelo\n",
+    "        feature_names = preprocessor.get_feature_names_out()\n",
+    "        coefficients = self.best_model.coef_[0]\n",
+    "        intercept = self.best_model.intercept_[0]\n",
+    "        \n",
+    "        coef_df = pd.DataFrame({\n",
+    "            'Feature': feature_names,\n",
+    "            'Coefficient': coefficients,\n",
+    "            'Abs_Coefficient': np.abs(coefficients)\n",
+    "        }).sort_values('Abs_Coefficient', ascending=False)\n",
+    "        \n",
+    "        print(f\"\\n🏆 TOP 8 COEFICIENTES MÁS IMPORTANTES:\")\n",
+    "        for i, (_, row) in enumerate(coef_df.head(8).iterrows(), 1):\n",
+    "            feature_clean = row['Feature'].split('__')[-1] if '__' in row['Feature'] else row['Feature']\n",
+    "            direction = \"↗️\" if row['Coefficient'] > 0 else \"↘️\"\n",
+    "            print(f\"   {i}. {direction} {feature_clean:<20} {row['Coefficient']:>8.4f}\")\n",
+    "        \n",
+    "        # 2. Odds Ratios\n",
+    "        print(f\"\\n📊 ODDS RATIOS (TOP 6):\")\n",
+    "        for i, (_, row) in enumerate(coef_df.head(6).iterrows(), 1):\n",
+    "            odds_ratio = np.exp(row['Coefficient'])\n",
+    "            feature_clean = row['Feature'].split('__')[-1] if '__' in row['Feature'] else row['Feature']\n",
+    "            interpretation = \"aumenta\" if odds_ratio > 1 else \"disminuye\"\n",
+    "            factor = odds_ratio if odds_ratio > 1 else 1/odds_ratio\n",
+    "            print(f\"   {i}. {feature_clean}: OR={odds_ratio:.3f} ({interpretation} {factor:.2f}x)\")\n",
+    "        \n",
+    "        # 3. Visualización\n",
+    "        fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "        \n",
+    "        # Gráfico 1: Top coeficientes\n",
+    "        top_coefs = coef_df.head(10)\n",
+    "        colors = ['red' if x < 0 else 'blue' for x in top_coefs['Coefficient']]\n",
+    "        \n",
+    "        axes[0].barh(range(len(top_coefs)), top_coefs['Coefficient'], color=colors, alpha=0.7)\n",
+    "        axes[0].set_yticks(range(len(top_coefs)))\n",
+    "        feature_labels = [f.split('__')[-1][:15] for f in top_coefs['Feature']]\n",
+    "        axes[0].set_yticklabels(feature_labels, fontsize=9)\n",
+    "        axes[0].set_xlabel('Coeficiente')\n",
+    "        axes[0].set_title('Top 10 Coeficientes')\n",
+    "        axes[0].axvline(x=0, color='black', linestyle='-', alpha=0.3)\n",
+    "        axes[0].invert_yaxis()\n",
+    "        \n",
+    "        # Gráfico 2: Curva de regularización\n",
+    "        C_values = [0.001, 0.01, 0.1, 1, 10, 100]\n",
+    "        train_scores = []\n",
+    "        val_scores = []\n",
+    "        \n",
+    "        for C in C_values:\n",
+    "            temp_model = LogisticRegression(C=C, random_state=self.random_state, max_iter=1000)\n",
+    "            temp_model.fit(X_train, y_train)\n",
+    "            \n",
+    "            train_score = roc_auc_score(y_train, temp_model.predict_proba(X_train)[:, 1])\n",
+    "            val_score = roc_auc_score(y_val, temp_model.predict_proba(X_val)[:, 1])\n",
+    "            \n",
+    "            train_scores.append(train_score)\n",
+    "            val_scores.append(val_score)\n",
+    "        \n",
+    "        axes[1].semilogx(C_values, train_scores, 'o-', label='Entrenamiento', color='blue')\n",
+    "        axes[1].semilogx(C_values, val_scores, 'o-', label='Validación', color='red')\n",
+    "        axes[1].axvline(x=self.best_model.C, color='green', linestyle='--', label=f'Mejor C={self.best_model.C}')\n",
+    "        axes[1].set_xlabel('C (Inverso de regularización)')\n",
+    "        axes[1].set_ylabel('ROC-AUC')\n",
+    "        axes[1].set_title('Curva de Regularización')\n",
+    "        axes[1].legend()\n",
+    "        axes[1].grid(True, alpha=0.3)\n",
+    "        \n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "        \n",
+    "        # 4. Verificación de supuestos\n",
+    "        print(f\"\\n🔍 VERIFICACIÓN DE SUPUESTOS:\")\n",
+    "        y_pred_proba = self.best_model.predict_proba(X_val)[:, 1]\n",
+    "        log_odds = np.log(y_pred_proba / (1 - y_pred_proba + 1e-8))\n",
+    "        \n",
+    "        # Linealidad promedio\n",
+    "        correlations = []\n",
+    "        for i in range(min(10, X_val.shape[1])):\n",
+    "            corr = np.corrcoef(X_val[:, i], log_odds)[0, 1]\n",
+    "            if not np.isnan(corr):\n",
+    "                correlations.append(abs(corr))\n",
+    "        \n",
+    "        avg_correlation = np.mean(correlations) if correlations else 0\n",
+    "        print(f\"   • Linealidad en log-odds: {avg_correlation:.3f}\")\n",
+    "        print(f\"   • Penalty: {self.best_model.penalty}\")\n",
+    "        print(f\"   • Convergencia: {'✅' if self.best_model.n_iter_[0] < self.best_model.max_iter else '⚠️'}\\\")\")\n",
+    "        \n",
+    "        # Guardar información adicional\n",
+    "        self.results['coefficients'] = coef_df.to_dict('records')\n",
+    "        self.results['intercept'] = intercept\n",
+    "        self.results['regularization_curve'] = {\n",
+    "            'C_values': C_values,\n",
+    "            'train_scores': train_scores,\n",
+    "            'val_scores': val_scores\n",
+    "        }\n",
+    "    \n",
+    "    def _save_results(self):\n",
+    "        \"\"\"Guardar modelo y resultados\"\"\"\n",
+    "        os.makedirs('models', exist_ok=True)\n",
+    "        \n",
+    "        model_path = f\"models/{self.model_name.lower()}_model.pkl\"\n",
+    "        joblib.dump(self.best_model, model_path)\n",
+    "        \n",
+    "        results_path = f\"models/{self.model_name.lower()}_results.pkl\"\n",
+    "        joblib.dump(self.results, results_path)\n",
+    "        \n",
+    "        self.results['model_path'] = model_path\n",
+    "        self.results['results_path'] = results_path\n",
+    "        \n",
+    "        print(f\"💾 Modelo guardado en: {model_path}\")\n",
+    "        print(f\"💾 Resultados guardados en: {results_path}\")\n",
+    "        \n",
+    "        print(f\"\\n{'='*30}\")\n",
+    "        print(f\"✅ REGRESIÓN LOGÍSTICA COMPLETADA\")\n",
+    "        print(f\"🎯 ROC-AUC Final: {self.results['metrics']['roc_auc']:.4f}\")\n",
+    "        print(f\"📊 Interpretabilidad: Coeficientes y Odds Ratios\")\n",
+    "        print(f\"{'='*30}\")\n",
+    "\n",
+    "# Ejecutar experimento\n",
+    "lr_experiment = ModelExperiment(\"LogisticRegression\", random_state=42)\n",
+    "lr_results = lr_experiment.run_experiment(X_train_processed, y_train, X_val_processed, y_val)"
    ]
   },
   {
@@ -2436,7 +2695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
