--- a/Entrega3/Entrega3_Errores.ipynb
+++ b/Entrega3/Entrega3_Errores.ipynb
@@ -15,11 +15,49 @@
     "- Identificación de patrones en errores\n",
     "- Estrategias de mejora basadas en análisis de errores"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46b873cc",
+   "metadata": {},
+   "source": [
+    "## Logistic Regresion "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87fd805d",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6adb9cf",
+   "metadata": {},
+   "source": [
+    "## XG Booost"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "738eeafb",
+   "metadata": {},
+   "source": [
+    "## Support Vector Machine"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
