added svm model and results pkl

--- a/Entrega3/svm.ipynb
+++ b/Entrega3/svm.ipynb
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "996adefe",
    "metadata": {},
    "outputs": [
@@ -1243,12 +1243,47 @@
       "    accuracy                           0.58        90\n",
       "   macro avg       0.57      0.52      0.45        90\n",
       "weighted avg       0.58      0.58      0.48        90\n",
-      "\n"
+      "\n",
+      "Accuracy: 0.578\n",
+      "Precision: 0.571\n",
+      "Recall: 0.103\n",
+      "F1 Score: 0.174\n",
+      "ROC AUC: 0.522\n",
+      "PR AUC: 0.447\n",
+      "Matthews Corrcoef: 0.081\n",
+      "Balanced Accuracy: 0.522\n",
+      "Brier Score: 0.422\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test, y_pred))"
+    "print(classification_report(y_test, y_pred))\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score, f1_score,\n",
+    "    roc_auc_score, average_precision_score, matthews_corrcoef,\n",
+    "    balanced_accuracy_score, brier_score_loss\n",
+    ")\n",
+    "\n",
+    "# For binary classification, use pos_label=1\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "precision = precision_score(y_test, y_pred)\n",
+    "recall = recall_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "roc_auc = roc_auc_score(y_test, y_pred)\n",
+    "pr_auc = average_precision_score(y_test, y_pred)\n",
+    "mcc = matthews_corrcoef(y_test, y_pred)\n",
+    "balanced_acc = balanced_accuracy_score(y_test, y_pred)\n",
+    "brier = brier_score_loss(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.3f}\")\n",
+    "print(f\"Precision: {precision:.3f}\")\n",
+    "print(f\"Recall: {recall:.3f}\")\n",
+    "print(f\"F1 Score: {f1:.3f}\")\n",
+    "print(f\"ROC AUC: {roc_auc:.3f}\")\n",
+    "print(f\"PR AUC: {pr_auc:.3f}\")\n",
+    "print(f\"Matthews Corrcoef: {mcc:.3f}\")\n",
+    "print(f\"Balanced Accuracy: {balanced_acc:.3f}\")\n",
+    "print(f\"Brier Score: {brier:.3f}\")"
    ]
   },
   {
@@ -2920,6 +2955,36 @@
     "    plt.ylim(-0.2, 1.2)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "60c881e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Save the trained SVM model\n",
+    "with open('svm_model.pkl', 'wb') as f:\n",
+    "    pickle.dump(model, f)\n",
+    "\n",
+    "# Save the results (metrics) as a dictionary\n",
+    "results = {\n",
+    "    'accuracy': accuracy,\n",
+    "    'precision': precision,\n",
+    "    'recall': recall,\n",
+    "    'f1': f1,\n",
+    "    'roc_auc': roc_auc,\n",
+    "    'pr_auc': pr_auc,\n",
+    "    'matthews_corrcoef': mcc,\n",
+    "    'balanced_accuracy': balanced_acc,\n",
+    "    'brier_score': brier\n",
+    "}\n",
+    "\n",
+    "with open('svm_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(results, f)"
    ]
   }
  ],
